CSS tweak to fix scrolling issue
Changed the top-level ra-template css height from '100%' to 'auto'. This
fixes a scrolling issue when the first element in the child content has
a margin (such as the <h1> tag) that pushes the whole content down, and
makes a scrollbar appear even when there should be enough space to not
need to scroll.

--- a/share/assets/css/110-Template-Controller.css
+++ b/share/assets/css/110-Template-Controller.css
@@ -3,7 +3,7 @@
 /* Templates directly within ExtJS Panel Bodys (i.e. Tabs)  
    should fill the full area for max flexibility:    */
 .x-panel-body>.ra-template {
-  height: 100%;
+  height: auto;
   width: 100%;
 }
 
